--- a/index.html
+++ b/index.html
@@ -4,17 +4,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HackerFab UBC - Electronics Fabrication Lab</title>
+    <title>HackerFab UBC</title>
     <meta name="description" content="HackerFab UBC is an open-access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines." />
     <meta name="author" content="HackerFab UBC" />
 
-    <meta property="og:title" content="HackerFab UBC - Electronics Fabrication Lab" />
+    <meta property="og:title" content="HackerFab UBC" />
     <meta property="og:description" content="HackerFab UBC is an open-access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines." />
     <meta property="og:type" content="website" />
 
+    <meta
+      property="og:title"
+      content="HackerFab UBC"
+    />
+    <meta
+      property="og:description"
+      content="HackerFab UBC is an open‑access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ubcfab.com" />
+    <meta property="og:image" content="/images/title-card.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- ──────  Twitter / X  ────── -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:title"
+      content="HackerFab UBC"
+    />
+    <meta
+      name="twitter:description"
+      content="HackerFab UBC is an open‑access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines."
+    />
+    <meta name="twitter:image" content="/images/title-card.png" />
+
+
+    <link rel="icon" type="image/png" href="images/logo.png" />
   </head>
 
   <body>
