--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackerFab UBC</title>
-    <meta name="description" content="HackerFab UBC is an open-access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines." />
+    <meta name="description" content="Student-run micro-fabrication lab making chips cheaper from scratch" />
     <meta name="author" content="HackerFab UBC" />
 
     <meta property="og:title" content="HackerFab UBC" />
-    <meta property="og:description" content="HackerFab UBC is an open-access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines." />
+    <meta property="og:description" content="Student-run micro-fabrication lab making chips cheaper from scratch" />
     <meta property="og:type" content="website" />
 
     <meta
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:description"
-      content="HackerFab UBC is an open‑access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines."
+      content="Student-run micro-fabrication lab making chips cheaper from scratch"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ubcfab.com" />
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:description"
-      content="HackerFab UBC is an open‑access electronics fabrication facility designed to democratize hardware development and foster innovation across disciplines."
+      content="Student-run micro-fabrication lab making chips cheaper from scratch"
     />
     <meta name="twitter:image" content="/images/title-card.png" />
 
